Fix Inception project: resolve Docker build issues and configuration errors
- Fix Dockerfiles: Add -y flag to apt upgrade commands (non-interactive builds)
- Fix MariaDB init script: Correct SQL syntax errors, proper password quoting, add error handling
- Fix WordPress container: Add php-fpm process (CMD), configure pool to listen on 0.0.0.0:9000
- Fix wp-config.php: Remove invalid php-fpm directives, use environment variables, set DB_HOST to mariadb
- Fix NGINX config: Change root to /var/www/wordpress, enable fastcgi_pass to wordpress:9000, fix domain
- Add php-fpm pool configuration (www.conf)
- Add .gitignore to prevent committing sensitive files (.env)
- Remove .env from git tracking (security: passwords should not be in repo)
- Add comprehensive documentation (FIXES_EXPLAINED.md, QUICK_START.md)

All fixes comply with subject requirements:
- No hardcoded passwords (uses env vars)
- Containers restart on failure
- Proper Docker networking
- TLS 1.2/1.3 only on port 443
- Volumes in /home/cthaler/data/
- Domain: cthaler.42.fr

--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bullseye
 #nginx container
 RUN ["apt", "update"]
-RUN ["apt", "upgrade"]
+RUN ["apt", "upgrade", "-y"]
 RUN ["apt", "install", "-y", "vim"]
 RUN ["apt", "install", "-y", "nginx"]
 RUN ["apt", "install", "-y", "openssl"]
