--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bullseye
 #mariaDB container
-RUN ["apt", "update"]
-RUN ["apt", "upgrade", "-y"]
+RUN ["apt-get", "update"]
+RUN ["apt-get", "upgrade", "-y"]
 #RUN ["apt", "install", "-y", "vim"]
 RUN ["apt-get", "install", "-y", "mariadb-server"]
 COPY ["./conf/50-server.cnf", "/etc/mysql/mariadb.conf.d/50-server.cnf"]
